--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+        <button onclick="add()">Add employee</button>
+        <button onclick="edit()">Edit employee</button>
+    <div id ="space">
+    </div>
+    <script src="../../scripts/management.js"></script>
 </body>
 </html>
