--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <input type="email" placeholder="Company Email" id="CE" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
-    <label id="passReqs" name="account"><em>*Your password must be at least 8 character long, have one upercase letter, lowercase letter, a number, and a special symbol.</em></label>
-    <input type="password" placeholder="Company password" id="CP" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
-    <input type="submit" onclick="check()">
+    <header>
+        <div class="titleContainer">
+            <h1 class="title">Managment & Surveillance</h1>
+        </div>
+        
+    </header>
+    <div class="mainContentContainer">
+        <div class="emailInputContainer">
+            <input type="email" placeholder=" Type your email" id="CE" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+        </div>
+        <div class="passwordInputContainer">
+            <input type="password" placeholder=" Type your password" id="CP" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+            <br>
+            <div class="passwordInputLabelContainer">
+                <label id="passReqs" name="account">
+                    <em>
+                        *Your password must be at least 8 character long, have one upercase letter, lowercase letter, a number, and a special symbol.
+                    </em>
+                </label>
+            </div>
+        </div>
+        <div class="submitInputContainer">
+            <input type="submit" onclick="check()" class="submitButton">
+        </div>
+    </div>
     <script src="../../scripts/login.js"></script>
 </body>
 </html>
