Revert "Added Icons"
This reverts commit 6a681bb0579e8f761e16e5e974d90faccd69d5cf.

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -16,15 +16,15 @@
     </header>
     <div class="mainContentContainer">
         <div class="emailInputContainer">
-            <input type="email" placeholder="Company Email" id="CE" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+            <input type="email" placeholder=" Type your email" id="CE" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
         </div>
         <div class="passwordInputContainer">
-            <input type="password" placeholder="Password" id="CP" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+            <input type="password" placeholder=" Type your password" id="CP" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
             <br>
             <div class="passwordInputLabelContainer">
                 <label id="passReqs" name="account">
                     <em>
-                        *Your password must be at least 8 characters long, have one upercase letter, one lowercase letter, a number, and a special symbol.
+                        *Your password must be at least 8 character long, have one upercase letter, lowercase letter, a number, and a special symbol.
                     </em>
                 </label>
             </div>
