--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="submitInputContainer">
-            <input type="submit" onclick="check()" class="submitButton">
+            <input type="submit" onclick="checkCookie()" class="submitButton">
         </div>
     </div>
     <script src="../../scripts/login.js"></script>
