--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -10,6 +10,21 @@
         <button onclick="add()">Add employee</button>
         <button onclick="edit()">Edit employee</button>
     <div id ="space">
+        <div class="dropdown">
+            <div id="myDropdown" class="dropdown-content">
+                <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+                <a href="#description" hidden>Description</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular information</a>
+            </div>
+        </div>
+
+        <div id="Alabama">
+        </div>
+        <div id="Alsaka">
+        </div>
+        <div id="Alabama">
+        </div>
     </div>
     <script src="../../scripts/management.js"></script>
 </body>
