--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="management.css">
     <title>Document</title>
 </head>
 <body>
-        <button onclick="add()">Add employee</button>
-        <button onclick="edit()">Edit employee</button>
     <div id ="space">
         <div class="dropdown">
             <div id="myDropdown" class="dropdown-content">
                 <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-                <a href="#description" hidden>Description</a>
+                <a href="#Alabama" hidden>Alabama</a>
                 <a href="#history" hidden>History</a>
                 <a href="#popular info" hidden>Popular information</a>
             </div>
