--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -13,8 +13,56 @@
             <div id="myDropdown" class="dropdown-content">
                 <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
                 <a href="#Alabama" hidden>Alabama</a>
+                <a href="#Alsaka" hidden>Alsaka</a>
+                <a href="#popular info" hidden>Popular information</a>
+                <a href="#Alabama" hidden>Alabama</a>
                 <a href="#history" hidden>History</a>
                 <a href="#popular info" hidden>Popular information</a>
+                <a href="#Alabama" hidden>Alabama</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular information</a>
+                <a href="#Alabama" hidden>Alabama</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular information</a>
+                <a href="#Alabama" hidden>Alabama</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular information</a>
+                <a href="#Alabama" hidden>Alabama</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular information</a>
+                <a href="#Alabama" hidden>Alabama</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular information</a>
+                <a href="#Alabama" hidden>Alabama</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular information</a>
+                <a href="#Alabama" hidden>Alabama</a>
+
+                <a href="#Montana" hidden>Montana</a>
+                <a href="#Nebraska" hidden>Nebraska</a>
+                <a href="#Nevada" hidden>Nevada</a>
+                <a href="#New Hampshire" hidden>New Hampshire</a>
+                <a href="#New Jeresy" hidden>New Jeresy</a>
+                <a href="#New Mexico" hidden>New Mexico</a>
+                <a href="#New York" hidden>New York</a>
+                <a href="#North Carolina" hidden>North Carolina</a>
+                <a href="#North Dakota" hidden>North Dakota</a>
+                <a href="#Ohio" hidden>Ohio</a>
+                <a href="#Oklahoma" hidden>Oklahoma</a>
+                <a href="#Oregon" hidden>Oregon</a>
+                <a href="#Pennsylvania" hidden>Pennsylvania</a>
+                <a href="#Rhode Island" hidden>Rhode Island</a>
+                <a href="#South Carolina" hidden>South Carolina</a>
+                <a href="#South Dakota" hidden>South Dakota</a>
+                <a href="#Tennessee" hidden>Tennessee</a>
+                <a href="#Texas" hidden>Texas</a>
+                <a href="#Utah" hidden>Utah</a>
+                <a href="#Vermont" hidden>Vermont</a>
+                <a href="#Virginia" hidden>Virginia</a>
+                <a href="#Wahsington" hidden>Wahsington</a>
+                <a href="#West Virginia" hidden>West Virginia</a>
+                <a href="#Wisconsin" hidden>Wisconsin</a>
+                <a href="#Wyoming" hidden>Wyoming</a>
             </div>
         </div>
 
