--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -13,15 +13,71 @@
         <div class="dropdown">
             <div id="myDropdown" class="dropdown-content">
                 <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+                <a href="#Alabam" hidden>Alabama</a>
+                <a href="#Alaska" hidden>Alaska</a>
+                <a href="#Arizona" hidden>Arizona</a>
+                <a href="#Arkansas" hidden>Arkansas</a>
+                <a href="#California" hidden>California</a>
+
+                <a href="#Colorado" hidden>Colorado</a>
+                <a href="#Connecticut" hidden>Connecticut</a>
+                <a href="#Delaware" hidden>Delaware</a>
+                <a href="#Florida" hidden>Florida</a>
+                <a href="#Georgia" hidden>Georgia</a>
+
+                <a href="#Hawaii" hidden>Hawaii</a>
+                <a href="#Idaho" hidden>Idaho</a>
+                <a href="#Illinois" hidden>Illinois</a>
+                <a href="#Indiana" hidden>Indiana</a>
+                <a href="#Iowa" hidden>Iowa</a>
+
+                <a href="#Kansas" hidden>Kansas</a>
+                <a href="#Kentucky" hidden>Kentucky</a>
+                <a href="#Louisiana" hidden>Louisiana</a>
+                <a href="#Maine" hidden>Maine</a>
+                <a href="#Maryland" hidden>Maryland</a>
+
+                <a href="#Massachusetts" hidden>Massachusetts</a>
+                <a href="#Michigan" hidden>Michigan</a>
+                <a href="#Minnesota" hidden>Minnesota</a>
+                <a href="#Mississippi" hidden>Mississippi</a>
+                <a href="#Missouri" hidden>Missouri</a>
+
                 <a href="#description" hidden>Description</a>
                 <a href="#history" hidden>History</a>
-                <a href="#popular info" hidden>Popular information</a>
+                <a href="#popular info" hidden>Popular</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
+
+                <a href="#description" hidden>Description</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
+
+                <a href="#description" hidden>Description</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
+
+                <a href="#description" hidden>Description</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
+
+                <a href="#description" hidden>Description</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
+                <a href="#history" hidden>History</a>
+                <a href="#popular info" hidden>Popular</a>
             </div>
         </div>
 
         <div id="Alabama">
         </div>
-        <div id="Alsaka">
+        <div id="Alaska">
         </div>
         <div id="Arizona">
         </div>
