Changed Home Page Header
Added the App Name and subsequent links to the home page and the search page.

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -10,7 +10,18 @@
 <body>
     <header>
         <div class="titleContainer">
-            <h1 class="title">Managment & Surveillance</h1>
+            <h1 class="title">
+                S.P.A.
+                <div class="subTitle">State Pricing Analytics</div>
+            </h1>
+        </div>
+        <div class="headerLinksContainer">
+            <a href="index.html" class="homeLink">
+                Home
+            </a>
+            <a href="search.html" class="searchLink">
+                Search
+            </a>
         </div>
         
     </header>
