--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -12,7 +12,7 @@
         <div class="dropdown">
             <div id="myDropdown" class="dropdown-content">
                 <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-                <a href="#Alabam" hidden>Alabama</a>
+                <a href="#Alabama" hidden>Alabama</a>
                 <a href="#Alaska" hidden>Alaska</a>
                 <a href="#Arizona" hidden>Arizona</a>
                 <a href="#Arkansas" hidden>Arkansas</a>
