--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -150,33 +150,230 @@
         </div>
         <div id="Oregon">
         </div>
+
+
         <div id="Pennsylvania">
+            <h2>Pennsylvania</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>3.07%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25/hour</p>
+                <li>Car Insurance</li>
+                <p>$51 per month for minimum coverage, on average, and around $193 per month for a full-coverage policy. $611 per year</p>
+                <li>Home Insurance</li>
+                <p>$87 a month. $1044 per year.</p>
+                <li>Health Insurance</li>
+                <p>$441 per month</p>
+                <li>Home costs</li>
+                <p>$206,575</p>
+            </ul>
         </div>
         <div id="Rhode Island">
+            <h2>Rhode Island</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>4.87%</p>
+                <li>Minimum Wage</li>
+                <p>$12.25/hour</p>
+                <li>Car Insurance</li>
+                <p>Average annual rate is $1,836, $153 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,221 per year. $101.75 per year</p>
+                <li>Health Insurance</li>
+                <p>$286 per month. $3432 per year.</p>
+                <li>Home costs</li>
+                <p>$422,000</p>
+            </ul>
         </div>
         <div id="South Carolina">
+            <h2>South Carolina</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>6%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,035 per year. $86.25 per month.</p>
+                <li>Home Insurance</li>
+                <p>$1,165 per year. $97 per month</p>
+                <li>Health Insurance</li>
+                <p>$339 per month. $4,068 per year</p>
+                <li>Home costs</li>
+                <p>$370,000.</p>
+            </ul>
         </div>
         <div id="South Dakota">
+            <h2>South Dakota</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>4.5%</p>
+                <li>Minimum Wage</li>
+                <p>$9.95/hour</p>
+                <li>Car Insurance</li>
+                <p>$1,535 per year. $127.91 per month</p>
+                <li>Home Insurance</li>
+                <p>$2,126 per year. $177.17 per month</p>
+                <li>Health Insurance</li>
+                <p>$671 per month. $8052 per year</p>
+                <li>Home costs</li>
+                <p>$239,500</p>
+            </ul>
         </div>
 
         <div id="Tennessee">
+            <h2>Tennessee</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>7%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$855 per year. $71.25 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,644 per year. $137 per month.</p>
+                <li>Health Insurance</li>
+                <p>$508 per month. $6096 per year.</p>
+                <li>Home costs</li>
+                <p>$419,000</p>
+            </ul>
         </div>
         <div id="Texas">
+            <h2>Texas</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>8.20%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,316 per year. %110 per month</p>
+                <li>Home Insurance</li>
+                <p>$4,142 a year or $345 a month</p>
+                <li>Health Insurance</li>
+                <p>$424 per month. $5088 per year.</p>
+                <li>Home costs</li>
+                <p>$390,600</p>
+            </ul>
         </div>
         <div id="Utah">
+            <h2>Utah</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>4.85%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$120 per month. $1440 per year</p>
+                <li>Home Insurance</li>
+                <p>$668 per year. $55.67 per month</p>
+                <li>Health Insurance</li>
+                <p>$445 per month. $5340 per year</p>
+                <li>Home costs</li>
+                <p>$500,000</p>
+            </ul>
         </div>
         <div id="Vermont">
+            <h2>Vermont</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>6.24%</p>
+                <li>Minimum Wage</li>
+                <p>$12.55 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,145 per year. $95.42 per month</p>
+                <li>Home Insurance</li>
+                <p>$686 per year. $57.17 per minute</p>
+                <li>Health Insurance</li>
+                <p>$670.50 per month. $8046 per year.</p>
+                <li>Home costs</li>
+                <p>$295,000</p>
+            </ul>   
         </div>
         <div id="Virginia">
+            <h2>Virgina</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>5.3%</p>
+                <li>Minimum Wage</li>
+                <p>$11.00 per hour</p>
+                <li>Car Insurance</li>
+                <p>$184 per month and $2,208 per year</p>
+                <li>Home Insurance</li>
+                <p>$924 per year. $77 per month.</p>
+                <li>Health Insurance</li>
+                <p>$441 per month. $5292 per year</p>
+                <li>Home costs</li>
+                <p>$401,082</p>
+            </ul>
         </div>
 
         <div id="Wahsington">
+            <h2>Washington</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>9.29%</p>
+                <li>Minimum Wage</li>
+                <p>$14.49 per hour</p>
+                <li>Car Insurance</li>
+                <p>$819.5 per year. $68.29 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,234 per year. $102.83 per month</p>
+                <li>Health Insurance</li>
+                <p>$443 per month. $5316 per year.</p>
+                <li>Home costs</li>
+                <p>$599,626</p>
+            </ul>
         </div>
         <div id="West Virginia">
+            <h2>West Virgina</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>6%</p>
+                <li>Minimum Wage</li>
+                <p>$8.75 per hour</p>
+                <li>Car Insurance</li>
+                <p>$978.5 per year. $81.54 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,124 per year. $93.67 per month</p>
+                <li>Health Insurance</li>
+                <p>$723 per month. $8676 per year</p>
+                <li>Home costs</li>
+                <p>$310,000</p>
+            </ul>
         </div>
         <div id="Wisconsin">
+            <h2>Wisconsin</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>5.5%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$963 annually and $80 monthly</p>
+                <li>Home Insurance</li>
+                <p>$928 per year. $77.33 per month</p>
+                <li>Health Insurance</li>
+                <p>$822 per month. $9864 per year</p>
+                <li>Home costs</li>
+                <p>$250,000</p>
+            </ul>
         </div>
         <div id="Wyoming">
+            <h2>Wyoming</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>4%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,541 per year. $128.42 per month</p>
+                <li>Home Insurance</li>
+                <p>$805 per year. $67.08 per month</p>
+                <li>Health Insurance</li>
+                <p>$618 per month $7,416 per year.</p>
+                <li>Home costs</li>
+                <p>$292,509</p>
+            </ul>
         </div>
         
     </div>
