my states turned into objects

--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -164,7 +164,7 @@
                 <li>Home Insurance</li>
                 <p>$87 a month. $1044 per year.</p>
                 <li>Health Insurance</li>
-                <p>$441 per month</p>
+                <p>$441 per month. $5292 per year</p>
                 <li>Home costs</li>
                 <p>$206,575</p>
             </ul>
@@ -246,7 +246,7 @@
                 <li>Minimum Wage</li>
                 <p>$7.25 per hour</p>
                 <li>Car Insurance</li>
-                <p>$1,316 per year. %110 per month</p>
+                <p>$1,316 per year. $110 per month</p>
                 <li>Home Insurance</li>
                 <p>$4,142 a year or $345 a month</p>
                 <li>Health Insurance</li>
@@ -282,7 +282,7 @@
                 <li>Car Insurance</li>
                 <p>$1,145 per year. $95.42 per month</p>
                 <li>Home Insurance</li>
-                <p>$686 per year. $57.17 per minute</p>
+                <p>$686 per year. $57.17 per month</p>
                 <li>Health Insurance</li>
                 <p>$670.50 per month. $8046 per year.</p>
                 <li>Home costs</li>
