--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -10,6 +10,8 @@
     <div id="main">
         <input type="text" id="yourState"></input>
         <input type="text" id="wantedState"></input>
+        <input type="submit" id="submit" onclick="compare()">
+        <p id="text"></p>
     </div>
 </body>
 </html>
