--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -70,31 +70,213 @@
         </div>
 
         <div id="Alabama">
+            <h2>Alabama</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>9.24%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,356 per year. $113 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,705 a year or $142 a month</p>
+                <li>Health Insurance</li>
+                <p>$567 per month. $6804 per year.</p>
+                <li>Home costs</li>
+                <p>$178,649</p>
+            </ul>
         </div>
         <div id="Alaska">
+            <h2>Alaska</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>1.76%</p>
+                <li>Minimum Wage</li>
+                <p>$10.34 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,433 per year. $119 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,307 a year or $109 a month</p>
+                <li>Health Insurance</li>
+                <p>$599 per month. $7188 per year.</p>
+                <li>Home costs</li>
+                <p>$385,000</p>
+            </ul>
         </div>
         <div id="Arizona">
+            <h2>Arizona</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>8.40%</p>
+                <li>Minimum Wage</li>
+                <p>$12.80 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,743 per year. $145 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,200 a year or $100 a month</p>
+                <li>Health Insurance</li>
+                <p>$503 per month. $6036 per year.</p>
+                <li>Home costs</li>
+                <p>$392,000</p>
+            </ul>
         </div>
         <div id="Arkansas">
+            <h2>Arkansas</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>9.47%</p>
+                <li>Minimum Wage</li>
+                <p>$11.00 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,189 per year. $99 per month</p>
+                <li>Home Insurance</li>
+                <p>$2,142 a year or $178.50 a month</p>
+                <li>Health Insurance</li>
+                <p>$456 per month. $5472 per year.</p>
+                <li>Home costs</li>
+                <p>$299,900</p>
+            </ul>
         </div>
         <div id="California">
+            <h2>California</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>8.82%</p>
+                <li>Minimum Wage</li>
+                <p>$14.00 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,429 per year. $119 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,460 a year or $122 a month</p>
+                <li>Health Insurance</li>
+                <p>$417 per month. $5004 per year.</p>
+                <li>Home costs</li>
+                <p>$769,405</p>
+            </ul>
         </div>
 
         <div id="Colorado">
+            <h2>Colorado</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>7.77%</p>
+                <li>Minimum Wage</li>
+                <p>$12.56 per hour</p>
+                <li>Car Insurance</li>
+                <p>$2,448 per year. $204 per month</p>
+                <li>Home Insurance</li>
+                <p>$2,412 a year or $201 a month</p>
+                <li>Health Insurance</li>
+                <p>$383 per month. $4596 per year.</p>
+                <li>Home costs</li>
+                <p>$594,500</p>
+            </ul>
         </div>
         <div id="Connecticut">
+            <h2>Connecticut</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>6.35%</p>
+                <li>Minimum Wage</li>
+                <p>$14.00 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,845 per year. $154 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,481 a year or $123 a month</p>
+                <li>Health Insurance</li>
+                <p>$534 per month. $6408 per year.</p>
+                <li>Home costs</li>
+                <p>$326,124</p>
+            </ul>
         </div>
         <div id="Delaware">
+            <h2>Connecticut</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>6.60%</p>
+                <li>Minimum Wage</li>
+                <p>$10.50 per hour</p>
+                <li>Car Insurance</li>
+                <p>$2,302 per year. $192 per month</p>
+                <li>Home Insurance</li>
+                <p>$845 a year or $70 a month</p>
+                <li>Health Insurance</li>
+                <p>$555 per month. $6660 per year.</p>
+                <li>Home costs</li>
+                <p>$317,985</p>
+            </ul>
         </div>
         <div id="Florida">
+            <h2>Florida</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>7.01%</p>
+                <li>Minimum Wage</li>
+                <p>$11.00 per hour</p>
+                <li>Car Insurance</li>
+                <p>$2,762 per year. $230 per month</p>
+                <li>Home Insurance</li>
+                <p>$2,122 a year or $177 a month</p>
+                <li>Health Insurance</li>
+                <p>$467 per month. $5604 per year.</p>
+                <li>Home costs</li>
+                <p>$382,000</p>
+            </ul>
         </div>
         <div id="Georgia">
+            <h2>Georgia</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>7.35%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$2,292 per year. $191 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,373 a year or $114 a month</p>
+                <li>Health Insurance</li>
+                <p>$394 per month. $4728 per year.</p>
+                <li>Home costs</li>
+                <p>$256,962</p>
+            </ul>
         </div>
 
         <div id="Hawaii">
+            <h2>Hawaii</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>4.44%</p>
+                <li>Minimum Wage</li>
+                <p>$12.00 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,440 per year. $120 per month</p>
+                <li>Home Insurance</li>
+                <p>$1,174 a year or $98 a month</p>
+                <li>Health Insurance</li>
+                <p>$491 per month. $5892 per year.</p>
+                <li>Home costs</li>
+                <p>$825,000</p>
+            </ul>
         </div>
         <div id="Idaho">
+            <h2>Idaho</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>6.02%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25 per hour</p>
+                <li>Car Insurance</li>
+                <p>$1,045 per year. $87 per month</p>
+                <li>Home Insurance</li>
+                <p>$982 a year or $82 a month</p>
+                <li>Health Insurance</li>
+                <p>$512 per month. $6144 per year.</p>
+                <li>Home costs</li>
+                <p>$446,000</p>
+            </ul>
         </div>
+
+
         <div id="Illinois">
         </div>
         <div id="Indiana">
