--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -15,33 +15,20 @@
                 <div class="subTitle">State Pricing Analytics</div>
             </h1>
         </div>
-        <div class="headerLinksContainer">
-            <a href="index.html" class="homeLink">
+    </header>
+    <div class="headerLinksContainer">
+            <a href="index.html" class="homeLink" id="underlineLink">
                 Home
             </a>
             <a href="search.html" class="searchLink">
                 Search
             </a>
         </div>
-        
-    </header>
     <div class="mainContentContainer">
-        <div class="emailInputContainer">
-            <input type="email" placeholder="Company Email" id="CE" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
-        </div>
-        <div class="passwordInputContainer">
-            <input type="password" placeholder="Password" id="CP" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
-            <br>
-            <div class="passwordInputLabelContainer">
-                <label id="passReqs" name="account">
-                    <em>
-                        *Your password must be at least 8 characters long, have one upercase letter, one lowercase letter, a number, and a special symbol.
-                    </em>
-                </label>
-            </div>
-        </div>
-        <div class="submitInputContainer">
-            <input type="submit" onclick="checkCookie()" class="submitButton">
+        <div class="introductionContainer">
+            <h1>
+                
+            </h1>
         </div>
     </div>
     <script src="../../scripts/login.js"></script>
