--- a/pages/management/management.html
+++ b/pages/management/management.html
@@ -125,30 +125,209 @@
         </div>
 
         <div id="Montana">
+            <h2>Montana</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>0.00%</p>
+                <li>Minimum Wage</li>
+                <p>$9.20</p>
+                <li>Car Insurance</li>
+                <p>$129</p>
+                <li>Home Insurance</li>
+                <p>$2,042</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="Nebraska">
+            <h2>Nebraska</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>5.50%</p>
+                <li>Minimum Wage</li>
+                <p>$9.00</p>
+                <li>Car Insurance</li>
+                <p>$127</p>
+                <li>Home Insurance</li>
+                <p>3,547</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="Nevada">
+            <h2>Nevada</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>6.85%</p>
+                <li>Minimum Wage</li>
+                <p>$9.50</p>
+                <li>Car Insurance</li>
+                <p>$127</p>
+                <li>Home Insurance</li>
+                <p>$975</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="New Hampshire">
+            <h2>New Hampshire</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>0.00%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25</p>
+                <li>Car Insurance</li>
+                <p>$80</p>
+                <li>Home Insurance</li>
+                <p>$876</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="New Jeresy">
+            <h2>New Jeresy</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>6.625%</p>
+                <li>Minimum Wage</li>
+                <p>$13.00</p>
+                <li>Car Insurance</li>
+                <p>$125</p>
+                <li>Home Insurance</li>
+                <p>$934</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
 
         <div id="New Mexico">
+            <h2>New Mexico</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>5.125%</p>
+                <li>Minimum Wage</li>
+                <p>$11.50</p>
+                <li>Car Insurance</li>
+                <p>$106</p>
+                <li>Home Insurance</li>
+                <p>$1,661</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="New York">
+            <h2>New York</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>4.00%</p>
+                <li>Minimum Wage</li>
+                <p>$13.20</p>
+                <li>Car Insurance</li>
+                <p>$141</p>
+                <li>Home Insurance</li>
+                <p>$1,262</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="North Carolina">
+            <h2>North Carolina</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>4.75%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25</p>
+                <li>Car Insurance</li>
+                <p>$84</p>
+                <li>Home Insurance</li>
+                <p>$1,794</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="North Dakota">
+            <h2>North Dakota</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>5.00%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25</p>
+                <li>Car Insurance</li>
+                <p>$110</p>
+                <li>Home Insurance</li>
+                <p>$2,128</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="Ohio">
+            <h2>Ohio</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>5.75%</p>
+                <li>Minimum Wage</li>
+                <p>$9.30</p>
+                <li>Car Insurance</li>
+                <p>$77</p>
+                <li>Home Insurance</li>
+                <p>$1,265</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
-
         <div id="Oklahoma">
+            <h2>Oklahoma</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>4.50%</p>
+                <li>Minimum Wage</li>
+                <p>$7.25</p>
+                <li>Car Insurance</li>
+                <p>$129</p>
+                <li>Home Insurance</li>
+                <p>$4,053</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="Oregon">
+            <h2>Oregon</h2>
+            <ul>
+                <li>Taxes</li>
+                <p>0.00%</p>
+                <li>Minimum Wage</li>
+                <p>$13.50</p>
+                <li>Car Insurance</li>
+                <p>$111</p>
+                <li>Home Insurance</li>
+                <p>$840</p>
+                <li>Health Insurance</li>
+                <p></p>
+                <li>Home Costs</li>
+                <p></p>
+            </ul>
         </div>
         <div id="Pennsylvania">
         </div>
