--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -10,8 +10,11 @@
     <div id="main">
         <input type="text" id="yourState"></input>
         <input type="text" id="wantedState"></input>
+        <input type="text" id="comparator"></input>
         <input type="submit" id="submit" onclick="compare()">
+        <br>
         <p id="text"></p>
     </div>
+    <script src="../../scripts/compare.js"></script>
 </body>
 </html>
