--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="compare.css">
 </head>
 <body>
     <div id="main">
+        <center>
+            <div>
+                <p>tax rate = taxRate</p>
+                <p>minimum wage = minWage</p>
+                <p>monthly car insurance = carInM</p>
+                <p>annual car insurance = carInY</p>
+                <p>monthly house insurace = homeInM</p>
+                <p>annual house insurance = homeInY</p>
+                <p>monthly health insurance = healthInM</p>
+                <p>annual health insurance = healthInY</p>
+                <p>average house cost = homeCost</p>
+                <hr>
+            </div>
+        </center>
         <input type="text" id="yourState"></input>
         <input type="text" id="wantedState"></input>
         <input type="submit" id="submit" onclick="compare()">
