--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="main">
-        <input type="text" id="yourState"></input>
-        <input type="text" id="wantedState"></input>
-        <input type="text" id="comparator"></input>
+        <input type="text" id="yourState" placeholder="State 1"></input>
+        <input type="text" id="wantedState" placeholder="State 2"></input>
+        <input type="text" id="comparator" placeholder="what you want to compare"></input>
         <input type="submit" id="submit" onclick="compare()">
         <br>
         <p id="text"></p>
