--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -10,20 +10,20 @@
 <body>
     <div id="main">
             <div>
-                <p>tax rate = taxRate</p>
-                <p>minimum wage = minWage</p>
-                <p>monthly car insurance = carInM</p>
-                <p>annual car insurance = carInY</p>
-                <p>monthly house insurace = homeInM</p>
-                <p>annual house insurance = homeInY</p>
-                <p>monthly health insurance = healthInM</p>
-                <p>annual health insurance = healthInY</p>
-                <p>average house cost = homeCost</p>
+                <p>tax rate</p>
+                <p>minimum wage</p>
+                <p>monthly car insurance</p>
+                <p>annual car insurance</p>
+                <p>monthly house insurace</p>
+                <p>annual house insurance</p>
+                <p>monthly health insurance</p>
+                <p>annual health insurance</p>
+                <p>average house cost</p>
                 <hr>
             </div>
         <input type="text" id="yourState" placeholder="State 1"></input>
         <input type="text" id="wantedState" placeholder="State 2"></input>
-        <input type="text" id="comparator" placeholder="what you want to compare"></input>
+        <input type="text" id="comparator" placeholder="What you want to compare"></input>
         <input type="submit" id="submit" onclick="compare()">
         <br>
         <p id="text"></p>
