Added Fonts and Most of the Home Page
as the title states

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -27,8 +27,21 @@
     <div class="mainContentContainer">
         <div class="introductionContainer">
             <h1>
-                
+                What is SPA?
             </h1>
+            <br>
+            <p class="introductionParagraph">
+                <span class="orangeText">SPA (State Pircing Analytics)</span> is a state based comparison, where you can compare different <span class="orangeText">basic needs</span> between states. This includes <span class="orangeText">insurance rates</span>, pricing, <span class="orangeText">healthcare</span>, and more! <span class="orangeText">SPA</span> is the perfect way to <span class="orangeText">quickly</span> see different useful information about each state.
+            </p>
+        </div>
+        <div class="goalsContainer">
+            <h1>
+                What are our Goals?
+            </h1>
+            <br>
+            <p class="goalsParagraph">
+                The main goal for SPA is to help those in need. 
+            </p>
         </div>
     </div>
     <script src="../../scripts/login.js"></script>
