--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -23,7 +23,7 @@
             </div>
         <input type="text" id="yourState" placeholder="State 1"></input>
         <input type="text" id="wantedState" placeholder="State 2"></input>
-        <input type="text" id="comparator" placeholder="What you want to compare"></input>
+        <input type="text" id="comparator" placeholder="what you want to compare"></input>
         <input type="submit" id="submit" onclick="compare()">
         <br>
         <p id="text"></p>
