--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -9,87 +9,187 @@
 </head>
 <body>
     <div id="main">
-        <div>
-            <p>tax rate</p>
-            <p>minimum wage</p>
-            <p>monthly car insurance</p>
-            <p>annual car insurance</p>
-            <p>monthly house insurace</p>
-            <p>annual house insurance</p>
-            <p>monthly health insurance</p>
-            <p>annual health insurance</p>
-            <p>average house cost</p>
-            <hr>
-        </div>
-        <div>
-            <ul class="list">
-                <a ><li>Alabama, AL</a ></li>
-                <a ><li>Alaska, AK</a ></li>
-                <a ><li>Arizona, AZ</a ></li>
-                <a ><li>Arkansas, AR</a ></li>
-                <a ><li>California, CA</a ></li>
-                <a ><li>Colorado, CO</a ></li>
-                <a ><li>Connecticut, CT</a ></li>
-                <a ><li>Delaware, DE</a ></li>
-                <a ><li>Florida, FL</a ></li>
-                <a ><li>Georgia, GA</a ></li>
-            </ul>
-        </div>
-        <div>
-            <ul class="list">
-                <a ><li>Hawaii, HI</a ></li>
-                <a ><li>Idaho, ID</a ></li>
-                <a ><li>Illinois, IL</a ></li>
-                <a ><li>Indiana, IN</a ></li>
-                <a ><li>Iowa, IA</a ></li>
-                <a ><li>Kansas, KS</a ></li>
-                <a ><li>Kentucky, KY</a ></li>
-                <a ><li>Louisiana, LA</a ></li>
-                <a ><li>Maine, ME</a ></li>
-                <a ><li>Maryland, MD</a ></li>
-            </ul>
-        </div>
-        <div>
-            <ul class="list">
-                <a ><li>Massachusetts, MA</a ></li>
-                <a ><li>Michigan, MI</a ></li>
-                <a ><li>Minnesota, MN</a ></li>
-                <a ><li>Mississippi, MS</a ></li>
-                <a ><li>Missouri, MO</a ></li>
-                <a ><li>Montana, MT</a ></li>
-                <a ><li>Nebraska, NE</a ></li>
-                <a ><li>Nevada, NV</a ></li>
-                <a ><li>New Hampshire, NH</a ></li>
-                <a ><li>New Jersey, NJ</a ></li>
-            </ul>
-        </div>
-        <div>
-            <ul class="list">
-                <a ><li>New Mexico, NM</a ></li>
-                <a ><li>New York, NY</a ></li>
-                <a ><li>North Carolina, NC</a ></li>
-                <a ><li>North Dakota, ND</a ></li>
-                <a ><li>Ohio, OH</a ></li>
-                <a ><li>Oklahoma, OK</a ></li>
-                <a ><li>Oregon, OR</a ></li>
-                <a ><li>Pennsylvania, PA</a ></li>
-                <a ><li>Rhode Island, RI</a ></li>
-                <a ><li>South Carolina, SC</a ></li>
-            </ul>
-        </div>
-        <div>
-            <ul class="list">
-                <a ><li>South Dakota, SD</a ></li>
-                <a ><li>Tennessee, TN</a ></li>
-                <a ><li>Texas, TX</a ></li>
-                <a ><li>Utah, UT</a ></li>
-                <a ><li>Vermont, VT</a ></li>
-                <a ><li>Virginia, VA</a ></li>
-                <a ><li>Washington, WA</a ></li>
-                <a ><li>West Virginia, WV</a ></li>
-                <a ><li>Wisconsin, WI</a ></li>
-                <a ><li>Wyoming, WY</a ></li>
-            </ul>
+        <div class="flexbox">
+            <div>
+                <p>tax rate</p>
+                <p>minimum wage</p>
+                <p>monthly car insurance</p>
+                <p>annual car insurance</p>
+                <p>monthly house insurace</p>
+                <p>annual house insurance</p>
+                <p>monthly health insurance</p>
+                <p>annual health insurance</p>
+                <p>average house cost</p>
+                <hr>
+            </div>
+            <div>
+                <ul class="list">
+                    <a>
+                        <li>Alabama, AL
+                    </li></a>
+                    <a>
+                        <li>Alaska, AK
+                    </li></a>
+                    <a>
+                        <li>Arizona, AZ
+                    </li></a>
+                    <a>
+                        <li>Arkansas, AR
+                    </li></a>
+                    <a>
+                        <li>California, CA
+                    </li></a>
+                    <a>
+                        <li>Colorado, CO
+                    </li></a>
+                    <a>
+                        <li>Connecticut, CT
+                    </li></a>
+                    <a>
+                        <li>Delaware, DE
+                    </li></a>
+                    <a>
+                        <li>Florida, FL
+                    </li></a>
+                    <a>
+                        <li>Georgia, GA
+                    </li></a>
+                </ul>
+            </div>
+            <div>
+                <ul class="list">
+                    <a>
+                        <li>Hawaii, HI
+                    </li></a>
+                    <a>
+                        <li>Idaho, ID
+                    </li></a>
+                    <a>
+                        <li>Illinois, IL
+                    </li></a>
+                    <a>
+                        <li>Indiana, IN
+                    </li></a>
+                    <a>
+                        <li>Iowa, IA
+                    </li></a>
+                    <a>
+                        <li>Kansas, KS
+                    </li></a>
+                    <a>
+                        <li>Kentucky, KY
+                    </li></a>
+                    <a>
+                        <li>Louisiana, LA
+                    </li></a>
+                    <a>
+                        <li>Maine, ME
+                    </li></a>
+                    <a>
+                        <li>Maryland, MD
+                    </li></a>
+                </ul>
+            </div>
+            <div>
+                <ul class="list">
+                    <a>
+                        <li>Massachusetts, MA
+                    </li></a>
+                    <a>
+                        <li>Michigan, MI
+                    </li></a>
+                    <a>
+                        <li>Minnesota, MN
+                    </li></a>
+                    <a>
+                        <li>Mississippi, MS
+                    </li></a>
+                    <a>
+                        <li>Missouri, MO
+                    </li></a>
+                    <a>
+                        <li>Montana, MT
+                    </li></a>
+                    <a>
+                        <li>Nebraska, NE
+                    </li></a>
+                    <a>
+                        <li>Nevada, NV
+                    </li></a>
+                    <a>
+                        <li>New Hampshire, NH
+                    </li></a>
+                    <a>
+                        <li>New Jersey, NJ
+                    </li></a>
+                </ul>
+            </div>
+            <div>
+                <ul class="list">
+                    <a>
+                        <li>New Mexico, NM
+                    </li></a>
+                    <a>
+                        <li>New York, NY
+                    </li></a>
+                    <a>
+                        <li>North Carolina, NC
+                    </li></a>
+                    <a>
+                        <li>North Dakota, ND
+                    </li></a>
+                    <a>
+                        <li>Ohio, OH
+                    </li></a>
+                    <a>
+                        <li>Oklahoma, OK
+                    </li></a>
+                    <a>
+                        <li>Oregon, OR
+                    </li></a>
+                    <a>
+                        <li>Pennsylvania, PA
+                    </li></a>
+                    <a>
+                        <li>Rhode Island, RI
+                    </li></a>
+                    <a>
+                        <li>South Carolina, SC
+                    </li></a>
+                </ul>
+            </div>
+            <div>
+                <ul class="list">
+                    <a>
+                        <li>South Dakota, SD
+                    </li></a>
+                    <a>
+                        <li>Tennessee, TN
+                    </li></a>
+                    <a>
+                        <li>Texas, TX
+                    </li></a>
+                    <a>
+                        <li>Utah, UT
+                    </li></a>
+                    <a>
+                        <li>Vermont, VT
+                    </li></a>
+                    <a>
+                        <li>Virginia, VA
+                    </li></a>
+                    <a><li>Washington, WA</li></a>
+                    <a>
+                        <li>West Virginia, WV
+                    </li></a>
+                    <a>
+                        <li>Wisconsin, WI
+                    </li></a>
+                    <a>
+                        <li>Wyoming, WY
+                    </li></a>
+                </ul>
+            </div>
         </div>
         <input type="text" id="yourState" placeholder="State 1"></input>
         <input type="text" id="wantedState" placeholder="State 2"></input>
